backend/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureai-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
  - host: secureai.local
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
